<resources>
    <string name="app_name">ChallengeAndroid</string>

    <string name="msg_retry">Retry</string>
    <string name="msg_loading">Loading...</string>
    <string name="msg_err_unknown">Ooops, Something went wrong!</string>
    <string name="msg_err_internet">Please check your internet connection.</string>

    <string name="hint_config_api_key">1c915e3b5d42d05136185030892fbb846c278927</string>
    <string name="hint_config_uid">spiderman</string>
    <string name="hint_config_appid">2070</string>
    <string name="hint_config_pub0">campaign2</string>

    <string name="uid_label">User Id:</string>
    <string name="apikey_label">API Key:</string>
    <string name="appid_label">App Id:</string>
    <string name="pub0_label">Pub 0:</string>


    <string name="btn_config_save_config">Go</string>

    <string name="example_offer_title">Tap Fish</string>
    <string name="example_offer_teaser">Download and START</string>
    <string name="example_offer_amount">1800</string>
</resources>
