<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    card_view:cardElevation="@dimen/products_list_card_elevation"
    card_view:cardPreventCornerOverlap="true"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <fyber.jehandadk.com.ui.AspectRatioImageView
            android:id="@+id/img_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/img_placeholder_loading"
            app:heightRatio="1"
            app:widthRatio="1" />

        <TextView
            android:id="@+id/txt_product_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_product"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:padding="2dp"
            android:text="@string/example_offer_title"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <TextView
            android:id="@+id/txt_product_teaser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_product_title"
            android:layout_centerHorizontal="true"
            android:padding="2dp"
            android:text="@string/example_offer_teaser" />

        <TextView
            android:id="@+id/txt_product_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_product_teaser"
            android:layout_centerHorizontal="true"
            android:padding="2dp"
            android:text="@string/example_offer_amount" />
    </RelativeLayout>

</android.support.v7.widget.CardView>